<resources>
    <string name="app_name">where-to-go</string>
    <string name="back4app_app_id">wusTD9WF9kBj9PzxfYEThlicMHYYvhWh1JZ8CrMZ</string>
    <string name="back4app_client_key">C5wIfdEEhIZcomPoImdHKixEYUFfYEOAtf9FjqY1</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="google_maps_api_key">AIzaSyDzDP8_LD6kH7QDGWMQjK02JRSaEtfrcDw</string>
    <string name="facebook_app_id">488384535263120</string>
    <string name="fb_login_protocol_scheme">fb488384535263120</string>
    <string name="facebook_client_token">5669ea79d3d278a9d5b758b83f024756</string>
    <string name="btnHome">Home</string>
    <string name="btnMap">Map</string>
    <string name="btnProfile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="featured_tour">Featured Tours</string>
    <string name="bookmarked_tours">Saved Tours</string>
    <string name="welcome">Welcome!</string>
    <string name="find_perfect_toue">Let\'s find your perfect tour!</string>
    <string name="title">title</string>
    <string name="image">image</string>
    <string name="enter_your_tour_name">Enter Your Tour Name</string>
    <string name="recent_tours">Recently Seen Tours (Top 5)</string>
    <string name="my_connections">My Connections</string>
    <string name="saved_tours">Saved Tours</string>
    <string name="start_save">Start/Save</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="btn_back">Back</string>
    <string name="number_of_days">Number Of Days</string>
    <string name="destination_type">Destination Type</string>
    <string name="price_under">Price Under</string>
    <string name="submit">Submit</string>
    <string name="usd">USD</string>
    <string name="transportation">Transportation Options</string>
    <string name="add_types_max_10">Add Categories</string>
    <string name="remove_types">Remove Categories</string>

    <string-array name="filter_list">
        <item>Food</item>
        <item>Nightlife</item>
        <item>Restaurants</item>
        <item>Shopping</item>
        <item>Religious</item>
        <item>Landmarks</item>
        <item>Hotels</item>
        <item>Natural</item>
        <item>Arts and Entertainment</item>
        <item>Beauty and Spas</item>
        <item>Public Event</item>
        <item>Financial Services</item>
        <item>Healthcare</item>
    </string-array>

    <string-array name="currency">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
    </string-array>

    <string-array name="transportation_options">
        <item>Car</item>
        <item>Bike</item>
        <item>Walk</item>
        <item>Public Transit</item>
    </string-array>
</resources>