<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/btnHome"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/btnMap"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/btnProfile"
        app:showAsAction="ifRoom" />
</menu>