<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity">

    <LinearLayout
        android:id="@+id/llFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llFilterList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llNoDays"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3333"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNoDays"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.72"
                    android:gravity="center"
                    android:text="@string/number_of_days" />

                <EditText
                    android:id="@+id/tvCountDays"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPriceUnder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.333"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/price_under" />

                <EditText
                    android:id="@+id/tvPriceUnder"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tvCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/usd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDestinationType"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.333"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDestinationType"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.001"
                    android:gravity="center"
                    android:text="@string/destination_type" />

                <Spinner
                    android:id="@+id/spDestinationType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/filter_list"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/submit" />

    </LinearLayout>

</RelativeLayout>