<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:id="@+id/fragment_home"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llTours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:isScrollContainer="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Possible List-->
        <LinearLayout
            android:id="@+id/llWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_gradient"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/proximanova_semibold"
                android:text="@string/welcome"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/offWhite"
                android:textSize="30sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvContinueTour"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/offWhite"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tvContinueTour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"

                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanova_semibold"
                        android:paddingTop="5dp"
                        android:text="@string/find_perfect_toue"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llFeaturedTours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFeaturedTour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:includeFontPadding="true"
                android:paddingTop="10dp"
                android:text="@string/featured_tour"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/appBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFeaturedTours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llRecentTours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvRecentTour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:paddingTop="8dp"
                android:text="@string/recent_tours"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/appBlack"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecentTours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp" />


        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>