<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:isScrollContainer="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llUserNameImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/profile_gradient"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/account_picture"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/username"
                android:scaleType="fitCenter"
                android:src="@drawable/common_full_open_on_phone"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/primary_text_light"
                    android:textStyle="bold"
                    tools:text="@string/username" />

                <TextView
                    android:id="@+id/account_twitter_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/secondary_text_light"
                    tools:ignore="TextContrastCheck"
                    tools:text="@string/username" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:paddingTop="8dp"
                android:text="@string/my_connections"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/appBlack"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSavedTours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSavedTour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:includeFontPadding="true"
                android:paddingTop="10dp"
                android:text="@string/saved_tours"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/appBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSavedTours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>